Check the entire length of the current argument for the EOF string with -E, but don't expect a proper ASCII string to exist right here right now, don't use strcmp(3) which checks for a NUL.  As we're still building the argument up, the next character might be garbage.  It would probably be just as safe to temporarily write a NUL there, but if we've reached the end of argument memory that might not be the best idea, I think.  It's unclear.

Doing it this way seems to meet the most with the original intent.

PR:		85696
Prodded by:	stefanf

Former-commit-id: 48d41624c54a92eac64cbcff9d275ec90432e235